2014-01-02 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gradsdes: changed LCC to LCCR in PDEF definition [Bug #4344]

2013-12-09 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* cat: "Segmentation fault" if the output file already exist [Bug #4291]

2013-12-04 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridFromH5file: set fclose degree to H5F_CLOSE_STRONG [Bug #4272]
	* cdoDefineGrid: first call gridFromH5file() for HDF tags

2013-11-29 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_csu: added number of csu periods with more than 5days per time period [request: Moritz Maneke]
	* eca_cfd: added number of cfd periods with more than 5days per time period  [request: Moritz Maneke]

2013-11-29 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapdis: optimization for regular 2D source grids

2013-11-28 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbic: optimization for regular 2D source grids

2013-11-27 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbil: optimization for regular 2D source grids

2013-11-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remapbil: skip explicitly call to sort_add() (weights are sorted implicitly)

2013-11-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remaplib: cleanup and preparation for opt. reg2d grids

2013-11-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* delete: parameter level does not work [Bug #4216]

2013-11-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.6.2
	* Version 1.6.2 released

2013-11-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added test/test_Remap.sh

2013-10-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_gsl: start date of growing season is wrong if the length of growing season is zero (bug fix) 

2013-10-21  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* splitmon: added optional parameter to set the format string for the month [Feature #4131]
	* Sort: added support for multi level variables (bug fix) [report: Irina Fast]
