@@ -7,6 +7,7 @@ TESTS = $(top_srcdir)/test/test_Gridarea.sh \
         $(top_srcdir)/test/test_Cat.sh \
         $(top_srcdir)/test/test_Spectral.sh \
         $(top_srcdir)/test/test_Timstat.sh \
+        $(top_srcdir)/test/test_Select.sh \
         $(top_srcdir)/test/test_Vertint.sh
 
 #       $(top_srcdir)/test/test_info.py
