@@ -1,3 +1,7 @@
+2014-01-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* Added test/test_Select.sh
+
 2014-01-02 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* gradsdes: changed LCC to LCCR in PDEF definition [Bug #4344]
